--- a/src/Cap04/Capitulo4.tex
+++ b/src/Cap04/Capitulo4.tex
@@ -2,24 +2,48 @@
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Images/manipulability/k0=0_00.png}
-    \caption{Resultados}\label{fig:man-k0-0_00}
+    \includegraphics[width=1.0\textwidth]{Images/joint_distance/joint_states_joint_distance.png}
+    \caption{Resultados}\label{fig:jd-js}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Images/manipulability/manipulability_measure.png}
-    \caption{Resultados}\label{fig:man}
+    \includegraphics[width=1.0\textwidth]{Images/joint_distance/metric_joint_distance.png}
+    \caption{Resultados}\label{fig:jd-m}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Images/joint_limit/k0=0.png}
-    \caption{Resultados}\label{fig:jlim-k0-0}
+    \includegraphics[width=1.0\textwidth]{Images/joint_distance/position_error_joint_distance.png}
+    \caption{Resultados}\label{fig:jd-e}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{Images/joint_limit/joint_limit.png}
-    \caption{Resultados}\label{fig:jlim}
+    \includegraphics[width=1.0\textwidth]{Images/joint_distance/position_joint_distance.png}
+    \caption{Resultados}\label{fig:jd-p}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=1.0\textwidth]{Images/manipulability/joint_states_manipulability.png}
+    \caption{Resultados}\label{fig:m-js}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=1.0\textwidth]{Images/manipulability/metric_manipulability.png}
+    \caption{Resultados}\label{fig:m-m}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=1.0\textwidth]{Images/manipulability/position_error_manipulability.png}
+    \caption{Resultados}\label{fig:m-e}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=1.0\textwidth]{Images/manipulability/position_manipulability.png}
+    \caption{Resultados}\label{fig:m-p}
 \end{figure}
