--- a/src/Identificacao.tex
+++ b/src/Identificacao.tex
@@ -2,7 +2,7 @@
     Hugo Tallys Martins Oliveira
 }
 \docTitle{
-    Resolução de Redundância Aplicada à Cinemática Inversa de Manipuladores Planares
+    Resolução de Redundância aplicada a um manipulador robótico com cinco graus de liberdade
 }
 
 \docType{1}	%% TCC=1; Qualificação Mestrado=2; Dissertação=3; Qualificação Doutorado=4; Tese=5;
