--- a/src/main.tex
+++ b/src/main.tex
@@ -6,6 +6,9 @@
 \usepackage{indentfirst}
 \usepackage{makecell}
 \usepackage{booktabs}
+\usepackage{algpseudocode, algorithm}
+
+\floatname{algorithm}{Algoritmo}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % Pacotes adicionados % % % % % % % % % % % % % % % %
