--- a/src/Cap04/Capitulo4.tex
+++ b/src/Cap04/Capitulo4.tex
@@ -1,5 +1,26 @@
 \chapter{Resultados}\label{cap:results}
 
+\section{Experimentos}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{./Images/exp-flow.png}
+    \caption{Etapas seguidas na execução de um experimento.}\label{fig:exp-flow}
+\end{figure}
+
+\subsection*{Experimento 1}
+
+$q_0 = q_f$ (variação de métrica controla o tempo de execução)
+
+\subsection*{Experimento 2}
+
+$q_0 \neq q_f$ (erro da posição e variação de métrica controla o tempo
+de execução)
+
+\subsection*{Experimento 3}
+$q_0 = q_0 + q_0^\prime \neq q_f$ com $q_0^\prime \sim \mathcal{N}(0, 0.1)$ (erro da posição e variação de métrica
+controla o tempo de execução) e repetir 100x
+
 \begin{figure}
     \centering
     \includegraphics[width=1.0\textwidth]{Images/joint_distance/joint_states_joint_distance.png}
