--- a/src/Identificacao.tex
+++ b/src/Identificacao.tex
@@ -10,13 +10,13 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\orientador{Ícaro Bezerra Queiroz de Araújo} %% Nome 
+\orientador{Glauber Rodrigues Leite} %% Nome 
 \tituloOrientador{Prof.\ Dr., UFAL} %% Titulo, Instituição
 
 \coorientador{} %% Nome
 \tituloCoorientador{} %% Título, Instituição
 
-\memberA{Glauber Rodrigues Leite} %% Nome
+\memberA{Ícaro Bezerra Queiroz de Araújo} %% Nome
 \filiationA{Dr., UFAL} %% Titulo, Instituição
 
 \memberB{Arthur Costa Vangasse} %% Nome
@@ -34,8 +34,8 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\setDate{01}
-\setMonth{Fevereiro}
+\setDate{24}
+\setMonth{Maio}
 \setYear{2024}
 \setLocation{Maceió, Alagoas}
 
